--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -45,7 +45,7 @@
       device: "设备"
     attributes:
       user:
-        name: "名字"
+        name: "昵称"
         login: "用户名"
         email: "Email"
         email_public: "公开 Email"
@@ -60,6 +60,7 @@
         tagline: "签名"
         state: "等级"
         company: "公司"
+        twitter: "X"
         github: "GitHub"
         remember_me: 记住登录状态
         current_password: 旧密码
