导航栏样式布局调整

--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -239,7 +239,7 @@ zh-CN:
     topic_list:
       recent: 新帖
       last_reply: 最新回复
-      popular: 优质讨论
+      popular: 热门
       banned: 已屏蔽
       excellent: 精华帖
       latest: 默认
