翻译调整 修复发帖按钮携带参数名不正确的问题 移除首页代码中的部分信息

--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -411,7 +411,7 @@ zh-CN:
     profile: 个人信息
     profile_detail: 详细资料
     reward: 打赏
-    password: 密码
+    password: 修改密码
     account: 账户设置
     applications: 我的应用
   notifications:
