--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -339,7 +339,7 @@ zh-CN:
     forget_password: 忘记了密码？
     find_password: 找回密码
     find_password_help_text: 此功能将会发送一个找回密码的特别链接到你的邮箱，通过该链接可以进入重置密码的页面。
-    not_recieve_confirm_mail: 未收到确认邮件？
+    not_recieve_confirm_mail: 未收到激活邮件？
     not_recieve_unlock_mail: 未收到解锁邮件？
     resend_unlock_mail: 重新发送解锁邮件
     current_have: 目前已经有
